# Telomere

./: .gitattributes  .gitignore  AGENTS.md  BEST_SPEC.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_MAP.md  IMPLEMENTATION_NOTES.md  README.md  RELEASE.md  RESEARCH_PLAN.md  RESULTS.md  TASK_CHECKLIST.md  TOTAL_COVER_RESULTS.md  analyze_conditional_entropy.py  arity2_quick.json  arity2_quick.md  arity_refine_d92.json  arity_refine_d92.md  geometric_quick.json  geometric_quick.md  geometric_refine.json  geometric_refine.md  geometric_sweep.json  geometric_sweep.md  high_p_probe.py  honest_checksum_fast.py  honest_checksum_focused.py  honest_checksum_probe.py  honest_checksum_recursion.py  inspect_penalty.py  joint_dp_quick.json  joint_dp_quick.md  long_pass_asymptote.py  long_pass_k8.py  markov_penalty.json  markov_penalty.md  markov_penalty_fixed.json  markov_penalty_fixed.md  markov_refine.json  (+24 more)
.claude/: launch.json
docs/: AFFINE_TRANSFORM_SEARCH.md  ALIGNMENT_ARITY_DISCOVERY.md  ARCHITECTURE.md  BLOCKED_REQUIREMENT_DISPATCH.md  BOUNDED_STREAMING_MEMORY_GATE.md  BYTE_PERMUTATION_TRANSFORM_SEARCH.md  CANDIDATE_LATTICE.md  CANDIDATE_RUNTIME_VERIFICATION.md  CLAIM_BOUNDARY_AUDIT.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_MANIFEST.md  COMPOSED_TRANSFORM_PROBE.md  CONTEXTUAL_FIFTH_BYTE_STEERING.md  CORPUS_MATRIX.md  DEPTH3_COMPRESSION_FOLLOWUP.md  DEPTH3_FRONTIER_EXACT_DISCOVERY.md  DEPTH3_PREFIX_PROBE.md  DEPTH4_PILOT_SHARD.md  DEPTH4_SHARD_PLAN.md  EXACT_SHORT_HIT_BUNDLE_ECONOMICS.md  EXPANDER_SALT_ENSEMBLE.md  EXPERIMENT_QUEUE.md  EXTERNAL_CORPUS_ACCESSION.md  FORMAT.md  FORMAT_CANONICAL.md  FROZEN_RANK_CODED_SPAN_GENERATOR.md  FROZEN_RANK_SOURCE_CANDIDATES.md  GENERALIZED_PACKED_SIDECAR.md  GENERATED_LEDGER_PIPELINE.md  GOAL_AUDIT.md  GOAL_COMPLETION_AUDIT.md  GOLDEN_CONFIG.md  INVESTOR_RESEARCH_BRIEF.md  LARGE_SOURCE_PRESET_PROBE.md  LATTICE_SELECTION_HELDOUT_PROBE.md  LEAD_DEPTH3_COMPRESSION_FOLLOWUP.md  LEAD_DEPTH3_PREFIX_PROBE.md  LEAD_EXACT_DISCOVERY.md  LONG_SPAN_BUNDLE_GATE.md  LOTUS_PRIMITIVE.md  (+178 more)
fuzz/: Cargo.toml
model_analysis/: FINDINGS.md  FULL_V1_MODEL.md  METHODS_APPENDIX.md  NET_COMPRESSION_REPORT.md  breakeven_landscape.py  breakeven_map.py  full_machine_sim.py  full_v1_model.py  public_dictionary_benchmark_results.txt  recurrence_model.py  telomere_depth_sweep.csv  telomere_distributional_model.py  telomere_exact_toy_model.py  telomere_math_model.py  telomere_math_report.md  telomere_model.html  telomere_model_assumptions.md  telomere_model_report.md  telomere_model_results.csv  telomere_probability_model.py  telomere_toy_validator.py  tv_clean.py  variability_test.py
scripts/: doc_lint.py  generate_acceleration_report.py  generate_affine_transform_search.py  generate_alignment_arity_discovery.py  generate_blocked_requirement_dispatch.py  generate_bounded_streaming_memory_gate.py  generate_bwt_mtf_transform_probe.py  generate_byte_permutation_transform_search.py  generate_candidate_runtime_verification.py  generate_claim_boundary_audit.py  generate_composed_transform_probe.py  generate_contextual_fifth_byte_steering.py  generate_corpus_generalization_probe.py  generate_corpus_matrix.py  generate_deep_sweeps.py  generate_depth3_compression_followup.py  generate_depth3_frontier_exact_discovery.py  generate_depth3_prefix_probe.py  generate_depth4_pilot_shard.py  generate_depth4_shard_plan.py  generate_evidence_regimen.py  generate_exact_short_hit_bundle_economics.py  generate_expander_salt_ensemble.py  generate_experiment_queue.py  generate_experimental_sidecar_descriptor.py  generate_external_corpus_accession.py  generate_fifth_byte_residual.py  generate_fifth_byte_steering.py  generate_frozen_rank_coded_span_generator.py  generate_frozen_rank_source_candidates.py  generate_generalized_packed_sidecar.py  generate_goal_audit.py  generate_goal_completion_audit.py  generate_grammar_channel_match_discovery.py  generate_heldout_corpus_expansion.py  generate_large_source_preset_probe.py  generate_lattice_selection_heldout_probe.py  generate_lead_depth3_compression_followup.py  generate_lead_depth3_prefix_probe.py  generate_lead_exact_discovery.py  (+70 more)
src/: block.rs  block_indexer.rs  bloom.rs  bundle.rs  bundle_select.rs  bundler.rs  candidate.rs  compress.rs  compress_stats.rs  config.rs  decompress.rs  error.rs  file_header.rs  gloss.rs  gloss_prune_hook.rs  gpu.rs  gpu_cpu.rs  gpu_impl.rs  gpu_kernels.cl  hash_reader.rs  hasher.rs  header.rs  hybrid.rs  indexed.rs  io_utils.rs  lib.rs  live_window.rs  lotus_core.rs  main.rs  path.rs  public_preset.rs  seed.rs  seed_detect.rs  seed_enum.rs  seed_expansion_index.rs  seed_index.rs  seed_logger.rs  sha_cache.rs  stats.rs  streaming.rs  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
telomere/: __init__.py  swe_seed_codec.py
tests/: CLI_FUZZ_README.md  adversarial_prop.proptest-regressions  adversarial_prop.rs  block_changes.rs  block_table_consistency.rs  block_tests.rs  branch_pruning.rs  brute_force_index.rs  bundle_select.rs  bundling.rs  cli_output_fuzz.py  cli_tests.rs  compress_bounds.rs  compress_determinism.rs  compress_literals.rs  compress_multi_pass.rs  compress_roundtrip_random.rs  compress_seeds.rs  compressor_cli.rs  config_validation.rs  decode_arity_blocks.rs  decoder_safety.rs  decompress.rs  decompress_seeds.rs  decompress_spans.rs  header.rs  (+42 more)
(+639 files in other folders)
