[package]
name = "telomere"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
memmap2 = "0.5"
bytemuck = "1"
thiserror = "2.0.12"
csv = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"


[[bin]]
name = "gloss_tool"
path = "src/bin/gloss_tool.rs"

[[bin]]
name = "compressor"
path = "src/bin/compressor.rs"

[[bin]]
name = "hash_precompute"
path = "src/bin/hash_precompute.rs"

[[bin]]
name = "gloss_debug_dump"
path = "src/bin/gloss_debug_dump.rs"

[[bin]]
name = "gloss_by_pass_dump"
path = "src/bin/gloss_by_pass_dump.rs"

[[bin]]
name = "seed_table"
path = "src/bin/seed_table.rs"

[[bin]]
name = "block_summary"
path = "src/bin/block_summary.rs"
