[package]
name = "telomere"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
csv = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"
tempfile = { version = "3.9", optional = true }
bytemuck = { version = "1.23.1", features = ["derive"] }
indicatif = "0.17"
ocl = { version = "0.19.7", optional = true }

# Mandated dependencies
blake3 = { version = "1.5", features = ["rayon"] }
hashbrown = "0.14"
bumpalo = "3.14"
memmap2 = "0.9"
rayon = "1.8"
tracing = "0.1"
tinyvec = "1.6"
positioned-io = "0.3"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.9"
quickcheck = "1"
rand = "0.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "compressor"
path = "src/bin/compressor.rs"

[[bin]]
name = "decompressor"
path = "src/bin/decompressor.rs"

[[bin]]
name = "hash_precompute"
path = "src/bin/hash_precompute.rs"

[[bin]]
name = "seed_table"
path = "src/bin/seed_table.rs"

[[bin]]
name = "block_summary"
path = "src/bin/block_summary.rs"

[[bin]]
name = "hash_dump"
path = "src/bin/hash_dump.rs"

[[bin]]
name = "block_histogram"
path = "src/bin/block_histogram.rs"

[[bin]]
name = "hash_find"
path = "src/bin/hash_find.rs"

[features]
# GPU accelerated seed matching. Off by default.
gpu = ["ocl"]
coverage = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
