[package]
name = "telomere-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
honggfuzz = "0.5"

[dependencies.telomere]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header_roundtrip"
path = "fuzz_targets/header_roundtrip.rs"
test = false
doc = false
bench = false
